--- a/_nTracer-pkg/src/nTracer/nTracer_.form
+++ b/_nTracer-pkg/src/nTracer/nTracer_.form
@@ -1253,7 +1253,7 @@
                       <Component id="selected_jPanel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="153" max="32767" attributes="0"/>
+                      <EmptySpace pref="198" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1279,16 +1279,14 @@
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="overlayAllName_jCheckBox" linkSize="25" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="overlayAllSoma_jCheckBox" linkSize="25" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="overlayAllNeuron_jCheckBox" linkSize="25" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="-2" attributes="0"/>
+                                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="overlayAllSynapse_jCheckBox" linkSize="25" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="overlayAllConnection_jCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="overlayAllSpine_jCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -1310,6 +1308,12 @@
                                       <Component id="extendAllDisplayPoints_jSpinner" alignment="0" min="-2" pref="44" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="overlayAllNeuron_jCheckBox" linkSize="25" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                                  <Component id="overlayAllConnection_jCheckBox" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="blank_jCheckBox" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
@@ -1328,22 +1332,24 @@
                               <Component id="overlayAllName_jCheckBox" linkSize="24" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="overlayAllSpine_jCheckBox" alignment="3" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="overlayAllSoma_jCheckBox" linkSize="24" alignment="3" min="-2" pref="16" max="-2" attributes="0"/>
                               <Component id="overlayAllSynapse_jCheckBox" linkSize="24" alignment="3" pref="0" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="overlayAllNeuron_jCheckBox" linkSize="24" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="overlayAllConnection_jCheckBox" alignment="3" max="32767" attributes="0"/>
                           </Group>
+                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                          <Component id="blank_jCheckBox" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="lineWidthOffset_jLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="allNeuronLineWidthOffset_jSpinner" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -1423,6 +1429,14 @@
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="4"/>
                   </AuxValues>
+                </Component>
+                <Component class="javax.swing.JCheckBox" name="blank_jCheckBox">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Blank"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="blank_jCheckBoxActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JCheckBox" name="overlayAllName_jCheckBox">
                   <Properties>
@@ -1593,7 +1607,7 @@
                                       <Component id="overlaySelectedSynapse_jCheckBox" linkSize="33" min="-2" max="-2" attributes="0"/>
                                       <Component id="overlaySelectedSpine_jCheckBox" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="32767" attributes="0"/>
+                                  <EmptySpace pref="10" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="pointBoxLineWidth_jSpinner" linkSize="48" alignment="0" min="-2" pref="39" max="-2" attributes="0"/>
                                       <Component id="synapseRadius_jSpinner" linkSize="48" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -1603,7 +1617,7 @@
                                       <Component id="neuronLineWidth_jSpinner" linkSize="48" alignment="0" max="32767" attributes="0"/>
                                       <Component id="somaLineWidth_jSpinner" linkSize="48" alignment="0" max="32767" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="32767" attributes="0"/>
+                                  <EmptySpace pref="10" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="pointBoxRadiu_jSpinner" linkSize="48" min="-2" max="-2" attributes="0"/>
                                       <Component id="overlaySelectedConnection_jCheckBox" min="-2" pref="67" max="-2" attributes="0"/>
@@ -2251,10 +2265,10 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="clearPoints_jButton" min="-2" pref="27" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jPanel4" min="-2" pref="93" max="-2" attributes="0"/>
+                      <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="channel_jPanel" min="-2" pref="176" max="-2" attributes="0"/>
-                      <EmptySpace pref="72" max="32767" attributes="0"/>
+                      <EmptySpace pref="81" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -2625,7 +2639,7 @@
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="7" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
                               <Component id="traceNeurite_jButton" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
@@ -3538,6 +3552,9 @@
         <Property name="text" type="java.lang.String" value="Info"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="4"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="srtPtInt_jLabel">
       <Properties>
